--- a/wp-content/themes/afgri_theme/css/main2.css
+++ b/wp-content/themes/afgri_theme/css/main2.css
@@ -454,7 +454,10 @@ textarea.form-control.message {
 .ml, .mr {
   padding: 0;
 }
-
+.wc-proceed-to-checkout
+{
+   margin-bottom: 10px;   
+}
 /* line 359, ../Sass/main.scss */
 .stockist {
   height: 86px;
