--- a/wp-content/themes/afgri_theme/css/main2.css
+++ b/wp-content/themes/afgri_theme/css/main2.css
@@ -468,6 +468,8 @@ textarea.form-control.message {
 .stockist button {
   margin-top: 25px;
   padding-right: 20px;
+  margin-right: 20px;
+  
 }
 /* line 369, ../Sass/main.scss */
 .stockist .st-info {
