--- a/wp-content/themes/afgri_theme/css/main2.css
+++ b/wp-content/themes/afgri_theme/css/main2.css
@@ -469,6 +469,7 @@ textarea.form-control.message {
   margin-top: 25px;
   padding-right: 20px;
   margin-right: 20px;
+  margin-left:-40px;
   
 }
 /* line 369, ../Sass/main.scss */
